hphp/test/slow/hack_arr_compat/reified_tuple.php.expectf
varray: []
darray: 
Catchable fatal error: Value returned from function check() must be of type (int, int), darray given in %s/reified_tuple.php on line 10
